crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__component__component_with_children.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_full(r#\"<Foo>hello</Foo>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(_ssrRenderComponent(_resolveComponent("Foo"), _attrs, {
    default: _withCtx((_, _push, _parent, _scopeId) => {
      if (_push) {
        _push(`hello`)
      } else {
        return [_createTextVNode("hello")]
      }
    }),
    _: 1
  }, _parent))
}
