crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__component__dynamic_component_slot_v_for_returns_vnodes.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_full(r#\"<component :is=\"tag\"><li v-for=\"item in items\">{{ item }}</li></component>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _ssrRenderVNode(_push, _createVNode(_resolveDynamicComponent(_ctx.tag), _attrs, { default: _withCtx(() => [(_openBlock(true), _createBlock(_Fragment, null, _renderList(_ctx.items, (item) => { return _createElementVNode("li", null, [_createTextVNode(_toDisplayString(item))]) }), 256 /* UNKEYED_FRAGMENT */))]), _: 1 }), _parent)
}
