crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__component__teleport_uses_ssr_helper.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_full(r#\"<Teleport to=\"body\"><Transition><div v-if=\"ok\">tip</div></Transition></Teleport>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _ssrRenderTeleport(_push, (_push) => {
    if (_ctx.ok) {
      _push(`<div>tip</div>`)
    } else {
      _push(`<!---->`)
    }
  }, "body", false, _parent)
}
