crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__component__transition_renders_children_directly.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_full(r#\"<Transition><Foo label=\"ready\" /></Transition>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(_ssrRenderComponent(_resolveComponent("Foo"), _mergeProps({ label: "ready" }, _attrs), null, _parent))
}
